// Copyright 2020 Buf Technologies Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bufbuild.buf.io.v1beta1;

option go_package = "iov1beta1";


enum FileScheme {
  FILE_SCHEME_UNSPECIFIED = 0;
  FILE_SCHEME_HTTP = 1;
  FILE_SCHEME_HTTPS = 2;
  FILE_SCHEME_LOCAL = 3;
  FILE_SCHEME_STDIO = 4;
  FILE_SCHEME_NULL = 5;
}

message FileRef {
  FileScheme scheme = 1;

  // path is the path of the image.
  //
  // This will be the path minus the scheme for http and https.
  // This will be the unnormalized file path for local.
  // This will be empty for stdio and null.
  string path = 3;
}

enum ImageFormat {
  IMAGE_FORMAT_UNSPECIFIED = 0;
  IMAGE_FORMAT_BIN = 1;
  IMAGE_FORMAT_BINGZ = 2;
  IMAGE_FORMAT_JSON = 3;
  IMAGE_FORMAT_JSONGZ = 4;
}

message ImageRef {
  FileRef file_ref = 1;
  ImageFormat format = 2;
}

enum ArchiveFormat {
  ARCHIVE_FORMAT_UNSPECIFIED = 0;
  ARCHIVE_FORMAT_TAR = 1;
  ARCHIVE_FORMAT_TARGZ = 2;
}

message ArchiveRef {
  FileRef file_ref = 1;
  ArchiveFormat format = 2;
  uint32 strip_components = 3;
}

enum GitRepositoryScheme {
  GIT_REPOSITORY_SCHEME_UNSPECIFIED = 0;
  GIT_REPOSITORY_SCHEME_HTTP = 1;
  GIT_REPOSITORY_SCHEME_HTTPS = 2;
  GIT_REPOSITORY_SCHEME_LOCAL = 3;
  GIT_REPOSITORY_SCHEME_SSH = 4;
}

enum GitRepositorySubmoduleBehavior {
  GIT_REPOSITORY_SUBMODULE_BEHAVIOR_UNSPECIFIED = 0;
  GIT_REPOSITORY_SUBMODULE_BEHAVIOR_NONE = 1;
  GIT_REPOSITORY_SUBMODULE_BEHAVIOR_RECURSIVE = 2;
}

message GitRepositoryRef {
  GitRepositoryScheme scheme = 1;
  // path is the path of the git repository.
  //
  // This will be the path minus the scheme for http, https, and ssh.
  // This will be the unnormalized direcotry path for local.
  string path = 2;
  oneof reference {
    string branch = 3;
    string tag = 4;
  }
  GitRepositorySubmoduleBehavior submodule_behavior = 5;
}

enum BucketScheme {
  BUCKET_SCHEME_UNSPECIFIED = 0;
  BUCKET_SCHEME_LOCAL = 1;
}

message BucketRef {
  BucketScheme scheme = 1;
  // path is the path of the bucket.
  //
  // This will be the unnormalized directory path for local.
  string path = 2;
}

message SourceRef {
  oneof value {
    ArchiveRef archive_ref = 1;
    GitRepositoryRef git_repository_ref = 2;
    BucketRef bucket_ref = 3;
  }
}

message InputRef {
  oneof value {
    ImageRef image_ref = 1;
    SourceRef source_ref = 2;
  }
}
